--- a/image1.css
+++ b/image1.css
@@ -1,17 +1,58 @@
 .grid-container{
     display: grid;
-    gap: 25px;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    /* width: 2000px;
+    height: 800px; */
     grid-template-areas: 
     'header header header header header header'
     'section2 section2 main main main main'
     'section2 section2 main main main main'
     'section2 section2 main main main main'
-    'secction3 secction3 extra'
-     'secction3 secction3 main main main main'
-      'secction3 secction3 main main main main'
-       'secction3 secction3 main main main main'
-    ;
-}
-div>div{
-    background-color: blue;
-}
+    'section3 section3 main main main main'
+     'section3 section3 extra extra extra extra'
+      'section3 section3 extra extra extra extra'
+       'section3 section3 extra extra extra extra '
+       'rel rel rel rel pos pos'
+       'rel rel rel rel pos pos'
+       'fo fo fo fo fo fo';
+    
+    }
+    div> div{
+       text-align: center;
+       color: white;
+       font-weight: bold;
+    }
+    .item1{
+        background-color: lightseagreen;
+        grid-area: header;
+    }
+    .item2{
+        background-color: violet;
+        grid-area: section2;
+    }
+    .item3{
+        background-color:darkgreen;
+        grid-area: section3;
+    }
+    .item4{
+        background-color: lightsalmon;
+        grid-area: main;
+    }
+    .item5{
+        background-color: lightgoldenrodyellow;
+        grid-area: extra;
+    }
+    .item6{
+        background-color: lightskyblue;
+        grid-area: rel;
+    }
+    .item7{
+        background-color:red;
+        grid-area: pos;
+    }
+    .item8{
+        background-color: blue;
+        grid-area: fo;
+    }
