--- a/image1.css
+++ b/image1.css
@@ -1,58 +1,57 @@
-.grid-container{
+body{
+    color: white;
+    text-align: center;
+    box-sizing: border-box;
+}
+.page{
     display: grid;
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    /* width: 2000px;
-    height: 800px; */
-    grid-template-areas: 
-    'header header header header header header'
-    'section2 section2 main main main main'
-    'section2 section2 main main main main'
-    'section2 section2 main main main main'
-    'section3 section3 main main main main'
-     'section3 section3 extra extra extra extra'
-      'section3 section3 extra extra extra extra'
-       'section3 section3 extra extra extra extra '
-       'rel rel rel rel pos pos'
-       'rel rel rel rel pos pos'
-       'fo fo fo fo fo fo';
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows:repeat(9, 1fr);
+    gap: 10px;
+    height: 100vh;
+}
+.sec1{
+    grid-column: 1/6;
+    grid-row:1/2 ;
+    background-color: rgb(47, 255, 78);
+    padding: 20px;
+}
+.sec2{
+    grid-column: 1/3;
+    grid-row: 2/4;
+
+    background-color: rgb(200, 211, 221);
+}
+.main{
+    grid-column: 3/6;
+    background-color: #b59f5f;
+    grid-row: 2/5;
+
+}
+.sec3{
+    grid-column: 1/3;
+    grid-row:4/7 ;
+    background-color: #495a2a;
     
-    }
-    div> div{
-       text-align: center;
-       color: white;
-       font-weight: bold;
-    }
-    .item1{
-        background-color: lightseagreen;
-        grid-area: header;
-    }
-    .item2{
-        background-color: violet;
-        grid-area: section2;
-    }
-    .item3{
-        background-color:darkgreen;
-        grid-area: section3;
-    }
-    .item4{
-        background-color: lightsalmon;
-        grid-area: main;
-    }
-    .item5{
-        background-color: lightgoldenrodyellow;
-        grid-area: extra;
-    }
-    .item6{
-        background-color: lightskyblue;
-        grid-area: rel;
-    }
-    .item7{
-        background-color:red;
-        grid-area: pos;
-    }
-    .item8{
-        background-color: blue;
-        grid-area: fo;
-    }
+}
+.extra{
+    grid-column: 3/6;
+    grid-row:5/7;
+    background-color: #a4b092;
+}
+.image{
+    grid-column:1/4;
+    grid-row: 7/9;
+    background-color: #2b81b6;
+}
+.post{
+    grid-column:4/6;
+    grid-row:7/9 ;
+    background-color: #c6487d;
+}
+.footer{
+    grid-column: 1/6;
+    grid-row: 9/10;
+    background-color: #0008ff;
+    padding: 20px;
+}
