--- a/image2.css
+++ b/image2.css
@@ -1,32 +1,56 @@
-body{
-    background-color:lightblue;
-}
-.container{
-    margin-left: 500px;
-    background-color: rgb(215, 204, 104);
-    border-radius: 50px;
-    width: 500px;
-    display: flex;
-    flex-direction: column;
-}
-.items{
-    display: flex;
-    border-bottom: 1px solid;
 
-}
-img {
-    width: 50px;
-    height: 50px;
-    border-radius: 50px;
-    margin-left: 15px;
-    margin-top: 15px;
-}
-h2 {
-    margin-left: 10px;
-}
-p{
-margin-left: 10px;
-}
-.itemsx{
-    display: flex;
-}
+  Body {
+    Display: grid;
+    Justify-content: center;
+    Align-items: center;
+    Min-height: 100vh;
+    Background-color: #b3f0f2;
+    Margin: 0;
+    Padding: 0;
+    Box-sizing: border-box;
+  }
+  
+  .card {
+    Background-color: #c8cc82;
+    Border-radius: 20px;
+    Box-shadow: 10px 10px 20px #000000;
+    Padding: 20px;
+    Width: 350px;
+  }
+  
+  .employee {
+    Display: grid;
+    Grid-template-columns: 75px 1fr;
+    Align-items: center;
+    Border-bottom: 1px solid #ccc;
+    Padding-bottom: 15px;
+  }
+  
+    
+  .pic {
+    Background-color: gray;
+    Width: 65px;
+    Height: 65px;
+    Border-radius: 50%;
+  }
+  
+  .info {
+    Display: grid;
+    Flex-direction: column;
+    Justify-content:space-between;
+  }
+  
+  .name {
+    display: grid;
+    Font-size: 18px;
+  }
+  
+  .job {
+    Color: #555;
+    Font-size: 14px;
+  }
+  
+  
+  
+  
+  
