--- a/image3.css
+++ b/image3.css
@@ -1,45 +1,70 @@
-.container{
-    position: fixed;
-    height: 90%;
-    width: 90%;
-    background-color: aqua;
-    display: grid;
-    gap: 25px;
-    grid-template-areas: ;
-    grid-template-areas: 
-    'he he he he he'
-    'as as ar ar ar'
-    'as as ar ar ar'
-    'as as ar ar ar'
-    'as as ar ar ar'
-    'fe fe fe fe fe';
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr  ;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+
+ Body {
+    Font-family: Arial, sans-serif;
+    color:white;
+    background-color: #bee4f1;
+    border-radius: 15px;
+    text-align: center;
+    width: 600px;
+    height: 600px
+
+  }
+  
+
+
+
+.container {
+    Display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows:repeat(9, 1fr);
+    Grid-gap: 10px;
+    height: 70vh;
+  }
+  
+  .header {
+    grid-row: 1/2;
+    grid-column: 1/4 ;
+    Background-color: #02b9ab;
+    Padding: 10px;
+    Text-align: center;
     
-}
-.item1{
-    grid-area: he;
-    background-color: rgb(1, 146, 141);
-}
-.item2{
-    grid-area: as;
-    background-color: rgb(114, 218, 116);
-    
-}
-.item3{
-    grid-area: ar;
-    background-color: rgb(231, 156, 42);
-    display: flex;
-    align-content: end;
+  
+  }
+  
+  .aside {
+    Background-color: #6bd46b;
+    Padding: 10px;
+    grid-column: 1/2;
+    grid-row: 2/9;
+   
+
+  }
+  
+.article {
+    Display: grid;
+    Grid-template-columns: 1fr 1fr 1fr;
+    Grid-gap: 10px;
+    background-color: #f3aa4a;
+    grid-column: 2/4;
+    grid-row: 2/9;
+  }
+  
+  .image {
+    Background-color:#f4cb48;
+    Padding: 20px;
+    Text-align: center;
+    grid-row: 7/9 ;
+    margin: 10px ;
+    text-align: center;  
 
 }
-.item4{
-    grid-area: fe;
-    background-color: rgb(1, 146, 141);
-}
-div>div{
-    text-align: center;
-    color: white;
-    font-size: large;
-    align-content: center;
-}
+
+  
+  .footer {
+    Background-color: #02b9ab;
+    Padding: 10px;
+    Text-align: center;
+    grid-column: 1/4;
+    grid-row: 9/10;
+  }
+  
