--- a/image1.css
+++ b/image1.css
@@ -1,57 +1,49 @@
-body{
-    color: white;
-    text-align: center;
-    box-sizing: border-box;
+.container{
+    display:grid ;
+background-color:white;
+grid-template-columns: repeat(8,1fr);
+grid-template-rows: repeat(10,1fr) ;
+width: 1527px;
+height: 713px;
+gap: 10px;
+text-align: center;
+color: white;
+font-family: Arial, Helvetica, sans-serif;
 }
-.page{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows:repeat(9, 1fr);
-    gap: 10px;
-    height: 100vh;
+div >div{
+    padding: 30px;
 }
-.sec1{
-    grid-column: 1/6;
-    grid-row:1/2 ;
-    background-color: rgb(47, 255, 78);
-    padding: 20px;
-}
-.sec2{
-    grid-column: 1/3;
-    grid-row: 2/4;
-
-    background-color: rgb(200, 211, 221);
-}
-.main{
-    grid-column: 3/6;
-    background-color: #b59f5f;
-    grid-row: 2/5;
-
-}
-.sec3{
-    grid-column: 1/3;
-    grid-row:4/7 ;
-    background-color: #495a2a;
+.item1{
+    background-color: greenyellow;
+    grid-area: 1/1/2/9;
+    
     
 }
-.extra{
-    grid-column: 3/6;
-    grid-row:5/7;
-    background-color: #a4b092;
+.item2{
+    background-color: rgb(232, 172, 241);
+    grid-area: 2/1/4/4;
 }
-.image{
-    grid-column:1/4;
-    grid-row: 7/9;
-    background-color: #2b81b6;
+.item3{
+    background-color: rgb(68, 91, 34);
+    grid-area:4/1/8/4;
 }
-.post{
-    grid-column:4/6;
-    grid-row:7/9 ;
-    background-color: #c6487d;
+.item4{
+    background-color: rgb(211, 143, 75);
+grid-area:2/4/6/9;
 }
-.footer{
-    grid-column: 1/6;
-    grid-row: 9/10;
-    background-color: #0008ff;
-    padding: 20px;
+.item5{
+    background-color: rgb(165, 173, 152);
+    grid-area:6/4/8/9;
+}
+.item6{
+    background-color: rgb(81, 130, 167);
+    grid-area: 8/1/10/7;
+}
+.item7{
+    background-color: rgb(225, 42, 91);
+    grid-area: 8/7/10/9;
+}
+.item8{
+    background-color: rgb(57, 30, 209);
+    grid-area: 10/1/11/9;
 }
