--- a/image3.css
+++ b/image3.css
@@ -1,70 +1,53 @@
-
- Body {
-    Font-family: Arial, sans-serif;
-    color:white;
-    background-color: #bee4f1;
-    border-radius: 15px;
+.container{
+    display: grid;
+    background-color: lightblue;
+    grid-template-columns:repeat(6,2fr) ;
+    grid-template-rows:repeat(6,2fr) ;
+    width: 700px;
+    height: 600px;
+    margin-left: 400px;
+    margin-top: 60px;
+    gap: 20px;
+    padding: 20px;
+    border-radius: 5%;
     text-align: center;
-    width: 600px;
-    height: 600px
-
-  }
-  
-
-
-
-.container {
-    Display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows:repeat(9, 1fr);
-    Grid-gap: 10px;
-    height: 70vh;
-  }
-  
-  .header {
-    grid-row: 1/2;
-    grid-column: 1/4 ;
-    Background-color: #02b9ab;
-    Padding: 10px;
-    Text-align: center;
+    font-size: 30px;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
     
-  
-  }
-  
-  .aside {
-    Background-color: #6bd46b;
-    Padding: 10px;
-    grid-column: 1/2;
-    grid-row: 2/9;
-   
-
-  }
-  
-.article {
-    Display: grid;
-    Grid-template-columns: 1fr 1fr 1fr;
-    Grid-gap: 10px;
-    background-color: #f3aa4a;
-    grid-column: 2/4;
-    grid-row: 2/9;
-  }
-  
-  .image {
-    Background-color:#f4cb48;
-    Padding: 20px;
-    Text-align: center;
-    grid-row: 7/9 ;
-    margin: 10px ;
-    text-align: center;  
-
 }
-
-  
-  .footer {
-    Background-color: #02b9ab;
-    Padding: 10px;
-    Text-align: center;
-    grid-column: 1/4;
-    grid-row: 9/10;
-  }
-  
+.a7a{
+    display: flex;
+    justify-content:space-evenly;
+    align-content: end;
+    height:170px;
+    width: 457px;
+    
+}
+.bnbn{
+    border: 1px solid white;
+    align-content: center;
+}
+.img{
+    background-color: rgba(234, 200, 92, 0.41);
+    height: 110px;
+    width: 110px;
+    align-content: center;
+}
+.item1{
+    background-color:rgb(10, 160, 160) ;
+    grid-area: 1/1/2/7;
+}
+.item2{
+    background-color:rgb(126, 216, 126) ;
+    grid-area: 2/1/6/3;
+}
+.item3{
+    background-color:orange ;
+grid-area: 2/3/6/7;
+align-content: end;
+}
+.item4{
+     background-color:rgb(10, 160, 160) ;
+grid-area: 6/1/7/7;
+    }
